# internal/module/reset_password/reset_password.router.go
@@ -1,3 +1,15 @@
 package reset_password
 
-func NewResetPasswordRouter() {}
+import (
+	"github.com/LeMinh0706/SocialMediaFood-Backend/pkg/token"
+	"github.com/LeMinh0706/SocialMediaFood-Backend/util"
+	"github.com/gin-gonic/gin"
+)
+
+func NewResetPasswordRouter(r *gin.Engine, group *gin.RouterGroup, service IResetPasswordService, config util.Config, token token.Maker) {
+	rc := NewResetPasswordController(service, config, token)
+	reset := r.Group(group.BasePath() + "/reset-password")
+	{
+		reset.POST("", rc.ResetPasswordRequest)
+	}
+}
